# project-templates

./: .gitignore  Cargo.toml  README.md
.claude-commands/: new.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml
fastapi-react/: .cursorrules  CLAUDE.md
fastapi-react/.claude/agents/: fastapi-expert.md  react-expert.md
fastapi-react/.claude/commands/: code-review.md  plan.md  tdd.md
fastapi-react/.claude/rules/: coding-style.md  security.md  testing.md
fastapi-react/.github/: copilot-instructions.md
fastapi-react/docs/brd/: 0-first-feature-template.md
fastapi-react/docs/project_notes/: bugs.md  decisions.md  issues.md  key_facts.md
fastapi-react/skills/ai-integration/: SKILL.md
fastapi-react/skills/fastapi-patterns/: SKILL.md
fastapi-react/skills/react-patterns/: SKILL.md
fastapi-react/skills/tdd-workflow/: SKILL.md
generators/: Cargo.toml  README.md
generators/src/: cli.rs  main.rs
skills/new/: SKILL.md
templates/java-25/: .gitignore  CLAUDE.md  README.md  build.gradle  gradle.properties  settings.gradle
templates/java-25/core/: build.gradle
templates/java-25/gradle/: libs.versions.toml
templates/java-25/platform/: build.gradle
templates/java-25/rest/: build.gradle
templates/nextjs/: package.json
templates/rust-1.9/: .gitignore  CLAUDE.md  Cargo.toml  README.md
templates/rust-1.9/crates/cli/: Cargo.toml
templates/rust-1.9/crates/cli/src/: main.rs
templates/rust-1.9/crates/core/: Cargo.toml
templates/rust-1.9/crates/core/src/: error.rs  lib.rs
vibe-generate/src/: main.rs  scaffold.rs
(+13 files in other folders)
