[package]
name = "vibe-generate"
version = "0.1.0"
edition = "2021"
description = "CLI tool to scaffold new projects from boilerplate templates"
license = "MIT"
repository = "https://github.com/tiktuzki/project-templates"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
fs_extra = "1.3"
walkdir = "2"
include_dir = "0.7"
