[package]
name = "{{project-name}}-cli"
description = "CLI for {{project-name}}"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "{{project-name}}"
path = "src/main.rs"

[dependencies]
project-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
